Добавлен контроллер фильмов
